<resources>
    <string name="app_name">TheMovie\nDatabase</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="no_popular_movie_to_display">No popular movie to display</string>
    <string name="an_unknown_error_occured">An unknnown error occurred</string>
    <string name="movie_detail">Movie Detail</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date</string>
    <string name="duration">Duration</string>
    <string name="duration_minutes">%1$s min</string>
    <string name="vote_average">Vote Avg</string>
    <string name="votes">Votes</string>
</resources>